# Manuscrito-Wolmir

./: README.md
Manuscrito/: CMakeLists.txt  ProyectoSDL.props  credit.txt
Manuscrito/assets/data/: MainMenu.txt  finalCerrarTexts.txt  finalLiberarTexts.txt  introTexts.txt  notes.txt  texts.json  texts.txt
Manuscrito/src/: AudioManager.cpp  AudioManager.h  Book.cpp  Book.h  Button.h  CerrarScene.cpp  CerrarScene.h  CodeTest.cpp  CodeTest.h  Component.h  Fader.cpp  Fader.h  GameObject.cpp  GameObject.h  Hover.cpp  Hover.h  IntroScene.cpp  IntroScene.h  LiberarScene.cpp  LiberarScene.h  LoadTexts.cpp  LoadTexts.h  MainGame.cpp  MainGame.h  MainMenu.cpp  MainMenu.h  MonoBehaviour.cpp  MonoBehaviour.h  NoteRevealer.cpp  NoteRevealer.h  Notebook.cpp  Notebook.h  NotebookElement.cpp  NotebookElement.h  RunicTest.cpp  RunicTest.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  (+18 more)
